--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
 
     <color name="colorWhite">#fff</color>
     <color name="colorBlack">#000</color>
+
+    <color name="colorBtnOrange">#ec7e1c</color>
 </resources>
