--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,12 @@
     <dimen name="margin_top_demirbas">5dp</dimen>
 
     <dimen name="editTextHeight">40dp</dimen>
-
+    <dimen name="editTextAciklamaHeight">120dp</dimen>
+    <dimen name="marginTopEditText">5dp</dimen>
     <dimen name="marginStart">10dp</dimen>
     <dimen name="marginEnd">10dp</dimen>
+
+    <dimen name="input_label_vertical_spacing">8dp</dimen>
+    <dimen name="input_label_horizontal_spacing">4dp</dimen>
 
 </resources>
