--- a/app/src/main/res/layout/item_envanter_tif_card.xml
+++ b/app/src/main/res/layout/item_envanter_tif_card.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -11,81 +10,81 @@
     </data>
 
     <!--<androidx.cardview.widget.CardView-->
-        <!--android:id="@+id/cardView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@color/colorItemEnvanterCardBGround"-->
-        <!--&gt;-->
+    <!--android:id="@+id/cardView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/colorItemEnvanterCardBGround"-->
+    <!--&gt;-->
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorItemEnvanterCardBGround"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/viewNumber"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="#197b30"
+            android:gravity="center"
+            android:text="@{viewModel.index}"
+            android:textColor="#ffffff"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+
+        <TextView
+            android:id="@+id/tvUst"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="@color/colorItemEnvanterCardBGround"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/viewNumber"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="#197b30"
-                android:gravity="center"
-                android:text="@{viewModel.index}"
-                android:textColor="#ffffff"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@{viewModel.labelUst}"
+            app:layout_constraintBottom_toTopOf="@id/viewCizgi"
+            app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/viewCizgi"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.972" />
+        <!--android:text="@{demirbas.idString + demirbas.tasinir + demirbas.faturaNo}"-->
 
 
-            <TextView
-                android:id="@+id/tvUst"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="@{viewModel.labelUst}"
-                app:layout_constraintBottom_toTopOf="@id/viewCizgi"
-                app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/viewCizgi"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.972" />
-            <!--android:text="@{demirbas.idString + demirbas.tasinir + demirbas.faturaNo}"-->
+        <View
+            android:id="@+id/viewCizgi"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="10dp"
+            android:background="@color/colorItemEnvanterCizgi"
+            app:layout_constraintBottom_toBottomOf="@+id/viewNumber"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/viewNumber"
+            app:layout_constraintTop_toTopOf="@+id/viewNumber" />
 
 
-            <View
-                android:id="@+id/viewCizgi"
-                android:layout_width="0dp"
-                android:layout_height="2dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="10dp"
-                android:background="@color/colorItemEnvanterCizgi"
-                app:layout_constraintBottom_toBottomOf="@+id/viewNumber"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/viewNumber"
-                app:layout_constraintTop_toTopOf="@+id/viewNumber" />
-
-
-            <TextView
-                android:id="@+id/tvAlt"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="@{viewModel.labelAlt}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/tvUst"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/tvUst"
-                app:layout_constraintTop_toBottomOf="@+id/viewCizgi"
-                app:layout_constraintVertical_bias="0.028" />
-            <!--android:text="@{demirbas.adi}"-->
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvAlt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@{viewModel.labelAlt}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/tvUst"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/tvUst"
+            app:layout_constraintTop_toBottomOf="@+id/viewCizgi"
+            app:layout_constraintVertical_bias="0.028" />
+        <!--android:text="@{demirbas.adi}"-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--</androidx.cardview.widget.CardView>-->
 </layout>
