--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,18 +19,18 @@
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            >
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/backgroundToolbar"
+                android:background="@color/colorBackgroundToolbar"
                 app:titleTextColor="@color/colorBlack"
                 app:navigationIcon="@mipmap/ic_icon"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:title="@{viewModel.titleToolbar}"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+
                 />
         </com.google.android.material.appbar.AppBarLayout>
 
