--- a/app/src/main/res/layout/item_envanter_tif_card.xml
+++ b/app/src/main/res/layout/item_envanter_tif_card.xml
@@ -25,11 +25,11 @@
 
         <TextView
             android:id="@+id/viewNumber"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#197b30"
+            android:background="@drawable/bg_tv_round"
             android:gravity="center"
             android:text="@{viewModel.index}"
             android:textColor="#ffffff"
